--- a/myBib.bib
+++ b/myBib.bib
@@ -6,11 +6,7 @@
     number = 4,
     pages = {562-568},
     year = 1993,
-    month = 12,
-    issn = {1063-5157},
-    doi = {10.1093/sysbio/42.4.562},
-    url = {https://doi.org/10.1093/sysbio/42.4.562},
-    eprint = {https://academic.oup.com/sysbio/article-pdf/42/4/562/4662342/42-4-562.pdf}
+    url = {https://doi.org/10.1093/sysbio/42.4.562}
 }
 
 @incollection{Yates,
@@ -45,11 +41,7 @@
     number = {9},
     pages = {1162-1168},
     year = {2003},
-    month = {06},
-    issn = {1367-4803},
-    doi = {10.1093/bioinformatics/btg131},
-    url = {https://doi.org/10.1093/bioinformatics/btg131},
-    eprint = {https://academic.oup.com/bioinformatics/article-pdf/19/9/1162/801444/btg131.pdf}
+    url = {https://doi.org/10.1093/bioinformatics/btg131}
 }
 
 @article{Maddison,
@@ -60,12 +52,7 @@
     number = {4},
     pages = {590-621},
     year = {1997},
-    month = {12},
-    abstract = "{NEXUS is a file format designed to contain systematic data for use by computer programs. The goals of the format are to allow future expansion, to include diverse kinds of information, to be independent of particular computer operating systems, and to be easily processed by a program. To this end, the format is modular, with a file consisting of separate blocks, each containing one particular kind of information, and consisting of standardized commands. Public blocks (those containing information utilized by several programs) house information about taxa, morphological and molecular characters, distances, genetic codes, assumptions, sets, trees, etc.; private blocks contain information of relevance to single programs. A detailed description of commands in public blocks is given. Guidelines are provided for reading and writing NEXUS files and for extending the format.}",
-    issn = {1063-5157},
-    doi = {10.1093/sysbio/46.4.590},
-    url = {https://doi.org/10.1093/sysbio/46.4.590},
-    eprint = {https://academic.oup.com/sysbio/article-pdf/46/4/590/19502018/46-4-590.pdf}
+    url = {https://doi.org/10.1093/sysbio/46.4.590}
 }
 
 @article{Inglis,
@@ -126,7 +113,7 @@
     author = "{Wikipedia contributors}",
     title = "Interoperabilidade sem\^{a}ntica --- {Wikipedia}{,}The Free Encyclopedia",
     year = "2022",
-    url = "{https://pt.m.wikipedia.org/wiki/Interoperabilidade{\_}sem%C3%A2ntica}",
+    url = "{https://pt.m.wikipedia.org/wiki/Interoperabilidade{\_}sem{\%}C3{\%}A2ntica}",
     note = "[Online; accessed 12-September-2022]"
 }
   
@@ -156,9 +143,9 @@
 
 @misc{wikiCibernetica,
     author = "{Wikipedia contributors}",
-    title = "Cibern\{'}etica --- Governo Digital",
+    title = "Cibern\'{e}tica --- Governo Digital",
     year = "2022",
-    url = "{https://pt.wikipedia.org/wiki/Cibern%C3%A9tica}",
+    url = "{https://pt.wikipedia.org/wiki/Cibern{\%}C3{\%}A9tica}",
     note = "[Online; accessed 12-September-2022]"
 }
 
@@ -170,11 +157,7 @@
     number = {3},
     pages = {416-439},
     year = {1974},
-    month = {09},
-    issn = {1063-5157},
-    doi = {10.1093/sysbio/23.3.416},
-    url = {https://doi.org/10.1093/sysbio/23.3.416},
-    eprint = {https://academic.oup.com/sysbio/article-pdf/23/3/416/4672840/23-3-416.pdf},
+    url = {https://doi.org/10.1093/sysbio/23.3.416}
 }
 
 @article{Eshbaugh,
@@ -185,11 +168,7 @@
     number = 5,
     pages = {455-462},
     year = 1995,
-    month = {},
-    issn = {1572-9710},
-    doi = {10.1007/BF00056336},
-    url = {https://doi.org/10.1007/BF00056336},
-    eprint = {},
+    url = {https://doi.org/10.1007/BF00056336}
 }
 
 @article{Cracraft,
@@ -212,11 +191,7 @@
     number = {9},
     pages = {3021-3030},
     year = {1985},
-    month = {05},
-    issn = {0305-1048},
-    doi = {10.1093/nar/13.9.3021},
-    url = {https://doi.org/10.1093/nar/13.9.3021},
-    eprint = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC322779/pdf/pnas00305-0018.pdf},
+    url = {https://doi.org/10.1093/nar/13.9.3021}
 }
 
 @article{Hall,
@@ -226,12 +201,7 @@
     volume = 41,
     number = {},
     pages = {95-98},
-    year = 1999,
-    month = {},
-    issn = {},
-    doi = {},
-    url = {},
-    eprint = {},
+    year = 1999
 }
 
 @article{Muller,
@@ -242,11 +212,7 @@
     number = 1,
     pages = {65-69},
     year = 2005,
-    month = {},
-    issn = {1175-5636},
-    doi = {10.2165/00822942-200504010-00008},
-    url = {https://doi.org/10.2165/00822942-200504010-00008},
-    eprint = {},
+    url = {https://doi.org/10.2165/00822942-200504010-00008}
 }
 
 @article{Vaidya,
@@ -257,11 +223,7 @@
     number = 2,
     pages = {171-180},
     year = 2011,
-    month = {4},
-    issn = {1096-0031},
-    doi = {10.1111/j.1096-0031.2010.00329.x},
-    url = {https://doi.org/10.1111/j.1096-0031.2010.00329.x},
-    eprint = {},
+    url = {https://doi.org/10.1111/j.1096-0031.2010.00329.x}
 }
 
 @article{Huson,
@@ -272,11 +234,7 @@
     number = {2},
     pages = {254-267},
     year = {2005},
-    month = {10},
-    issn = {0737-4038},
-    doi = {10.1093/molbev/msj030},
-    url = {https://doi.org/10.1093/molbev/msj030},
-    eprint = {https://academic.oup.com/mbe/article-pdf/23/2/254/3894375/msj030.pdf},
+    url = {https://doi.org/10.1093/molbev/msj030}
 }
 
 @article{Huelsenbeck,
@@ -287,11 +245,7 @@
     number = {8},
     pages = {754-755},
     year = {2001},
-    month = {08},
-    issn = {1367-4803},
-    doi = {10.1093/bioinformatics/17.8.754},
-    url = {https://doi.org/10.1093/bioinformatics/17.8.754},
-    eprint = {https://academic.oup.com/bioinformatics/article-pdf/17/8/754/8201380/170754.pdf},
+    url = {https://doi.org/10.1093/bioinformatics/17.8.754}
 }
 
 @article{Doyles1987,
@@ -304,7 +258,6 @@
 }
 
 @article{Hagemann1999,
-  doi = {10.1385/mb:13:2:137},
   url = {https://doi.org/10.1385/mb:13:2:137},
   year = {1999},
   publisher = {Springer Science and Business Media {LLC}},
@@ -326,7 +279,7 @@
 
 @article{Souza_Alvarenga_2004,
     author = {Souza, R.R. and Alvarenga, L.},
-    title = {A Web Sem\^{a}ntica e suas contribui\{c}{c}\~{o}es para a ci\^{e}ncia da informa\{c}{c}\~{a}o},
+    title = {A Web Sem\^{a}ntica e suas contribui\c{c}\~{o}es para a ci\^{e}ncia da informa\c{c}\~{a}o},
     journal = {Ci. Inf., Bras\'{i}lia},
     volume = 33,
     number = 1,
@@ -336,7 +289,7 @@
 
 @article{Almeida_2002,
     author = {Almeida, M.B.},
-    title = {Uma introdu\{c}{c}\~{a}o ao XML, sua utiliza\{c}{c}\~{a}o na Internet e alguns conceitos complementares},
+    title = {Uma introdu\c{c}\~{a}o ao XML, sua utiliza\c{c}\~{a}o na Internet e alguns conceitos complementares},
     journal = {Ci. Inf., Bras\'{i}lia},
     volume = 31,
     number = 2,
@@ -345,11 +298,8 @@
 }
 
 @article{Gastauer2017,
-  doi = {10.1590/0102-33062016abb0306},
   url = {https://doi.org/10.1590/0102-33062016abb0306},
   year = {2017},
-  month = jun,
-  publisher = {{FapUNIFESP} ({SciELO})},
   volume = {31},
   number = {2},
   pages = {191--198},
@@ -359,11 +309,8 @@
 }
 
 @article{Li2021,
-  doi = {10.1186/s12915-021-01166-2},
   url = {https://doi.org/10.1186/s12915-021-01166-2},
   year = {2021},
-  month = oct,
-  publisher = {Springer Science and Business Media {LLC}},
   volume = {19},
   number = {1},
   author = {Hong-Tao Li and Yang Luo and Lu Gan and Peng-Fei Ma and Lian-Ming Gao and Jun-Bo Yang and Jie Cai and Matthew A. Gitzendanner and Peter W. Fritsch and Ting Zhang and Jian-Jun Jin and Chun-Xia Zeng and Hong Wang and Wen-Bin Yu and Rong Zhang and Michelle van der Bank and Richard G. Olmstead and Peter M. Hollingsworth and Mark W. Chase and Douglas E. Soltis and Pamela S. Soltis and Ting-Shuang Yi and De-Zhu Li},
@@ -372,11 +319,8 @@
 }
 
 @article{Johnson2018,
-  doi = {10.1093/sysbio/syy086},
   url = {https://doi.org/10.1093/sysbio/syy086},
   year = {2018},
-  month = dec,
-  publisher = {Oxford University Press ({OUP})},
   volume = {68},
   number = {4},
   pages = {594--606},
@@ -388,18 +332,15 @@
 
 @misc{wikiCirculoViena,
     author = "{Wikipedia contributors}",
-    title = "C\'irculo de Viena --- {Wikipedia}{,}The Free Encyclopedia",
+    title = "C\'{i}rculo de Viena --- {Wikipedia}{,}The Free Encyclopedia",
     year = "2022",
-    url = "https://pt.wikipedia.org/wiki/C%C3%ADrculo_de_Viena",
+    url = "https://pt.wikipedia.org/wiki/C{\%}C3{\%}ADrculo_de_Viena",
     note = "[Online; accessed 15-September-2022]"
 }
 
 @article{Luz2014,
-  doi = {10.4000/sociologico.1007},
   url = {https://doi.org/10.4000/sociologico.1007},
   year = {2014},
-  month = nov,
-  publisher = {{OpenEdition}},
   volume = {24},
   pages = {27--32},
   author = {Madel T. Luz},
@@ -408,19 +349,17 @@
 }
 
 @article{Santos_Klassa2012,
-  doi = {10.4000/sociologico.1007},
   url = {https://doi.org/10.1590/S1678-31662012000300008},
   year = {2012},
   number = {3},
   volume = 10,
   pages = {593--612},
   author = {Santos, Charles Morphy Dias and Klassa, Bruna},
-  title = {Sistem\'{a}tica filogen\'{e}tica hennigiana: revolu\{c}{c}\~{a}o ou mudan\{c}{c}a no interior de um paradigma?},
+  title = {Sistem\'{a}tica filogen\'{e}tica hennigiana: revolu\c{c}\~{a}o ou mudan\c{c}a no interior de um paradigma?},
   journal = {Scientiae Studia [online]}
 }
 
 @article{Santos2008,
-  doi = {10.4000/sociologico.1007},
   url = {https://doi.org/10.1590/S1678-31662008000200003},
   year = {2008},
   number = 6,
