--- a/myBib.bib
+++ b/myBib.bib
@@ -111,7 +111,7 @@
 
 @misc{wikiInteroperabilidadeSemantica,
     author = "{Wikipedia contributors}",
-    title = "Interoperabilidade sem\^{a}ntica --- {Wikipedia}{,}The Free Encyclopedia",
+    title = "{Interoperabilidade sem\^{a}ntica --- {Wikipedia}{,}The Free Encyclopedia}",
     year = "2022",
     url = "{https://pt.m.wikipedia.org/wiki/Interoperabilidade{\_}sem{\%}C3{\%}A2ntica}",
     note = "[Online; accessed 12-September-2022]"
@@ -127,7 +127,7 @@
  
 @misc{ePING,
     author = "{Programa de Governo Eletr\^{o}nico Brasileiro}",
-    title = "Padr\~{o}es de Interoperabilidade de Governo Eletr\^{o}nico - ePING --- Vers\~{a}o 2018",
+    title = "{Padr\~{o}es de Interoperabilidade de Governo Eletr\^{o}nico - ePING --- Vers\~{a}o 2018}",
     year = "2022",
     url = "https://eping.governoeletronico.gov.br",
     note = "[Online; accessed 13-September-2022]"
@@ -143,7 +143,7 @@
 
 @misc{wikiCibernetica,
     author = "{Wikipedia contributors}",
-    title = "Cibern\'{e}tica --- Governo Digital",
+    title = "{Cibern\'{e}tica --- Governo Digital}",
     year = "2022",
     url = "{https://pt.wikipedia.org/wiki/Cibern{\%}C3{\%}A9tica}",
     note = "[Online; accessed 12-September-2022]"
