--- a/myBib.bib
+++ b/myBib.bib
@@ -127,7 +127,7 @@
  
 @misc{ePING,
     author = "{Programa de Governo Eletr\^{o}nico Brasileiro}",
-    title = "{Padr\~{o}es de Interoperabilidade de Governo Eletr\^{o}nico - ePING --- Vers\~{a}o 2018}",
+    title = "{Padr\~oes de Interoperabilidade de Governo Eletr\^onico - ePING --- Vers\~ao 2018}",
     year = "2022",
     url = "https://eping.governoeletronico.gov.br",
     note = "[Online; accessed 13-September-2022]"
@@ -265,7 +265,7 @@
   number = {2},
   pages = {137--152},
   author = {Tracy L. Hagemann and Sau-Ping Kwan},
-  title = {{ABI}Sequencing Analysis: Manipulation of Sequence Data from the {ABI}{DNA}Sequencer},
+  title = {{ABI} Sequencing Analysis: Manipulation of Sequence Data from the {ABI}{DNA}Sequencer},
   journal = {Molecular Biotechnology}
 }
 
@@ -280,7 +280,7 @@
 @article{Souza_Alvarenga_2004,
     author = {Souza, R.R. and Alvarenga, L.},
     title = {A Web Sem\^{a}ntica e suas contribui\c{c}\~{o}es para a ci\^{e}ncia da informa\c{c}\~{a}o},
-    journal = {Ci. Inf., Bras\'{i}lia},
+    journal = {Ci. Inf., Bras\'{\i}lia},
     volume = 33,
     number = 1,
     pages = {132--141},
@@ -290,7 +290,7 @@
 @article{Almeida_2002,
     author = {Almeida, M.B.},
     title = {Uma introdu\c{c}\~{a}o ao XML, sua utiliza\c{c}\~{a}o na Internet e alguns conceitos complementares},
-    journal = {Ci. Inf., Bras\'{i}lia},
+    journal = {Ci. Inf., Bras\'{\i}lia},
     volume = 31,
     number = 2,
     pages = {5--13},
@@ -332,7 +332,7 @@
 
 @misc{wikiCirculoViena,
     author = "{Wikipedia contributors}",
-    title = "C\'{i}rculo de Viena --- {Wikipedia}{,}The Free Encyclopedia",
+    title = "C\'{\i}rculo de Viena --- {Wikipedia}{,}The Free Encyclopedia",
     year = "2022",
     url = "https://pt.wikipedia.org/wiki/C{\%}C3{\%}ADrculo_de_Viena",
     note = "[Online; accessed 15-September-2022]"
@@ -375,7 +375,7 @@
   date = {2010},
   author = {Paulo S. Terra},
   institution = {Bahia: Universidade Estadual de Santa Cruz},
-  title = {O triunfo da clad\'{i}stica: a an\'{a}lise do embate te\'{o}rico ocorrido na sistem\'{a}tica biol\'{o}gica na segunda metade do s\'{e}culo xx},
+  title = {O triunfo da clad\'{\i}stica: a an\'{a}lise do embate te\'{o}rico ocorrido na sistem\'{a}tica biol\'{o}gica na segunda metade do s\'{e}culo xx},
   type = {IV Semin\'{a}rio de Hist\'{o}ria e Filosofia da Ci\^{e}ncia}
 }
 
