--- a/myBib.bib
+++ b/myBib.bib
@@ -379,3 +379,29 @@
   type = {IV Semin\'{a}rio de Hist\'{o}ria e Filosofia da Ci\^{e}ncia}
 }
 
+@book{Mayr1982,
+  title={The Growth of Biological Thought: Diversity, Evolution, and Inheritance},
+  author={Ernst Mayr},
+  year={1982},
+  publisher = "Harvard University Press",
+  address   = "Cambridge, MA"
+}
+
+@article{Tremblay2013,
+  url = {https://doi.org/10.1007/s13752-012-0077-8},
+  year = {2013},
+  volume = {7},
+  number = {1},
+  pages = {56--68},
+  author = {Frederic Tremblay},
+  title = {Nicolai Hartmann and the Metaphysical Foundation of Phylogenetic Systematics},
+  journal = {Biological Theory}
+}
+
+@book{Schmitt2013,
+  title     = "From Taxonomy to Phylogenetics - Life and Work of Willi Hennig",
+  author    = "Schmitt, M.",
+  year      = 1988,
+  publisher = "Brill",
+  address   = "Leiden; Boston"
+}
