--- a/Introducao_a_filoinformatica.Rmd
+++ b/Introducao_a_filoinformatica.Rmd
@@ -192,36 +192,73 @@ Londres, década de 30. *The Theoretical Biology Club* --- esse era o nome que J
 
 - **Ludwig von Bertalanffy** (1901--1972): precursor da Teoria Geral dos Sistemas.
 
+:::: {style="display: flex;"}
+
+::: {}
+
 ![](images/Bertalanffy.jpg){width="300px"}
-  
-  - Austríaco, biólogo
-  - "Pai do organicismo"?
-  - Tudo é parte de algum todo.
+
+:::
+
+::: {}
+
+- Austríaco, biólogo
+- "Pai do organicismo"?
+- Tudo é parte de algum todo.
+
+:::
+
+::::
 
 - **Norbert Wiener** (1894--1909): Cibernética
 
+:::: {style="display: flex;"}
+
+::: {}
+
 ![](images/Wiener.jpg){width="300px"}
 
-  - Americano
-  - Foi aluno de **`r tippy('Bertrand Russell', tooltip = '<a style="color: blue;">Bertrand Russell (1872–1970)</a><br><img src="./images/Russell.png" width="300">')`**.
-  - Em 1948, Wiener publicou o livro `Cibernética: ou Controle e Comunicação no Animal e na Máquina`:
+:::
+
+::: {}
+
+- Americano
+- Foi aluno de **`r tippy('Bertrand Russell', tooltip = '<a style="color: blue;">Bertrand Russell (1872–1970)</a><br><img src="./images/Russell.png" width="300">')`**.
+- Em 1948, Wiener publicou o livro `Cibernética: ou Controle e Comunicação no Animal e na Máquina`:
 
   ![](https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Capa_cibernetica.jpg/220px-Capa_cibernetica.jpg)
 
-  - A cibernética é o estudo interdisciplinar da estrutura dos sistemas reguladores, suas estruturas, restrições e possibilidades. Norbert Wiener definiu a cibernética em 1948 como "o estudo científico do controle e comunicação no animal e na máquina" `r Cite(referencias, "wikiCibernetica")`.
+:::
 
-  - A cibernética é aplicável quando um sistema em análise incorpora um circuito fechado de sinalização --- originalmente chamado de relação "causal circular" --- isto é, onde a ação do sistema gera alguma mudança em seu ambiente e essa mudança é refletida no sistema de alguma maneira (*feedback*) que aciona uma alteração no sistema. A cibernética é relevante para, por exemplo, sistemas mecânicos, físicos, biológicos, cognitivos e sociais `r Cite(referencias, "wikiCibernetica")`.
+::::
+
+
+- A cibernética é o estudo interdisciplinar da estrutura dos sistemas reguladores, suas estruturas, restrições e possibilidades. Norbert Wiener definiu a cibernética em 1948 como "o estudo científico do controle e comunicação no animal e na máquina" `r Cite(referencias, "wikiCibernetica")`.
+
+- A cibernética é aplicável quando um sistema em análise incorpora um circuito fechado de sinalização --- originalmente chamado de relação "causal circular" --- isto é, onde a ação do sistema gera alguma mudança em seu ambiente e essa mudança é refletida no sistema de alguma maneira (*feedback*) que aciona uma alteração no sistema. A cibernética é relevante para, por exemplo, sistemas mecânicos, físicos, biológicos, cognitivos e sociais `r Cite(referencias, "wikiCibernetica")`.
 
 - **Alan Turing** (1912--1954): Informática
 
+:::: {style="display: flex;"}
+
+::: {}
+
 ![](images/Turing.jpg){width="300px"}
 
-  - Britânico, "pai da computação"
-  - Criou a "Máquina de Turing", protótipo dos computadores modernos.
-  - Desenvolveu um máquina para decifrar o código da "Máquina Enigma" (1918), utilizada pelos nazistas durante a Segunda Guerra Mundial.
-  - A cibernética desempenhou um papel decisivo no surgimento da revolução tecnológica.
-  - Foi aluno de John von Neumann (outro pioneiro da cibernética). Ambos e Claude Shannon, aluno de Norbert Wiener, com a sua Teoria da Informação, foram os precursores do computador `r Cite(referencias, "wikiCibernetica")`.
-  - Em 1943, constrói a primeira geração de computadores modernos (a válvula).
+:::
+
+::: {}
+
+- Britânico, "pai da computação"
+- Criou a "Máquina de Turing", protótipo dos computadores modernos.
+- Desenvolveu um máquina para decifrar o código da "Máquina Enigma" (1918), utilizada pelos nazistas durante a Segunda Guerra Mundial.
+- A cibernética desempenhou um papel decisivo no surgimento da revolução tecnológica.
+- Foi aluno de John von Neumann (outro pioneiro da cibernética). Ambos e Claude Shannon, aluno de Norbert Wiener, com a sua Teoria da Informação, foram os precursores do computador `r Cite(referencias, "wikiCibernetica")`.
+- Em 1943, constrói a primeira geração de computadores modernos (a válvula).
+
+:::
+
+::::
 
 <br>
 
